<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/menubuttons"
            android:onClick="playGame"
            android:text="@string/btnPlay"
            android:textColor="@color/colorPrimary"

            android:textSize="20sp"

            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="374dp" />

        <Button
            android:id="@+id/btnHighScore"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:onClick="viewHighScore"
            android:background="@drawable/menubuttons"
            android:text="@string/btnHighScore"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="457dp" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/menubuttons"
            android:onClick="viewSettings"
            android:text="@string/btnSettings"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="528dp" />

        <Button
            android:id="@+id/btnAddTrack"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/menubuttons"
            android:text="@string/btnAddTrack"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="605dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="388dp"

        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@color/blueStartColor"

                android:text="@string/btnSignin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.337"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@color/blueStartColor"

                android:text="@string/btnSignup"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnLogin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>