<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".settingsActivity">


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="26dp"
        android:layout_height="24dp"

        android:layout_margin="15dp"
        android:layout_marginTop="372dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMuteSound"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@color/blueEndColor"
                android:onClick="onMute"
                android:text="@string/rbtnMuteSound"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="339dp" />


        </LinearLayout>

        <Button
            android:id="@+id/btnChangeTrack"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@color/blueEndColor"
            android:text="@string/btnChangeTrack"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="437dp" />

        <Button
            android:id="@+id/btnInstructions"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:onClick="viewInstructions"
            android:layout_margin="15dp"
            android:background="@color/blueEndColor"
            android:text="@string/btnInstructions"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="534dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

